BGe: Fix T45597 wrong object layer for linked object in blenderplayer.